# freedroid

./: .cppcheck_suppressions  .gitignore  .mailmap  .reviewboardrc  ABOUT-NLS  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  FILES  HELP_WANTED  INSTALL  INSTALL.freedroidRPG  Makefile.am  NEWS  README  README-cs  README-de  README-es  README-fr  README-it  README-pt_BR  README-sv  README.md  autogen.sh  configure.ac  freedroidRPG.6  include.mk
archetypeeditor/: CMakeLists.txt  Makefile.am  abstractnode.cpp  abstractnode.h  archetypeeditor.qrc  booleannode.cpp  booleannode.h  compoundnode.cpp  compoundnode.h  compoundwidget.cpp  compoundwidget.h  datafilesyntaxes.cpp  datafilesyntaxes.h  floatnode.cpp  floatnode.h  gui.cpp  gui.h  integernode.cpp  integernode.h  main.cpp  singlechoicenode.cpp  singlechoicenode.h  singlelinenode.h  stringnode.cpp  stringnode.h
croppy/: CMakeLists.txt  Makefile.am  croppy.c
doc/: Doxyfile  Doxyfile.in  Makefile.am  extra.css  header.html  index.md
doc/manual/: Doxyfile  Doxyfile.in  Makefile.am  dialog.md  header.html  index.md  wikiheader.md
doc/tools/: Doxyfile.in  Makefile.am  cmdlineref.md  fddnm.md  header.html  index.md  playcheat.md
gluem/: CMakeLists.txt  Makefile.am  codeset.c  codeset.h  explode_atlas.c  explodefont.c  gluefont.c  gluem.c  make_atlas.c  make_bmchars.c  pngfuncs.c  pngfuncs.h  ungluem.c
graphics/: Makefile.am  README  level_editor_waypoint_cursor.offset  make_atlas.py
graphics/blasts/: iso_blast_bullet_0012.offset  iso_blast_droid_0004.offset
graphics/bullets/: iso_bullet_exterminator_00_0001.offset  iso_bullet_exterminator_01_0001.offset  iso_bullet_exterminator_03_0001.offset  iso_bullet_exterminator_04_0001.offset  iso_bullet_exterminator_05_0001.offset  iso_bullet_exterminator_06_0001.offset  iso_bullet_exterminator_07_0001.offset  iso_bullet_exterminator_08_0001.offset  iso_bullet_exterminator_09_0001.offset  iso_bullet_exterminator_10_0001.offset  iso_bullet_exterminator_11_0001.offset  iso_bullet_exterminator_13_0001.offset  iso_bullet_exterminator_14_0001.offset  iso_bullet_half_pulse_00_0001.offset  iso_bullet_half_pulse_03_0001.offset  iso_bullet_half_pulse_04_0001.offset  iso_bullet_half_pulse_06_0001.offset  iso_bullet_half_pulse_07_0001.offset  iso_bullet_half_pulse_08_0001.offset  iso_bullet_half_pulse_12_0001.offset  iso_bullet_half_pulse_13_0001.offset  iso_bullet_half_pulse_15_0001.offset  iso_bullet_laser_rifle_00_0001.offset  iso_bullet_laser_rifle_01_0001.offset  iso_bullet_laser_rifle_02_0001.offset  iso_bullet_laser_rifle_03_0001.offset  iso_bullet_laser_rifle_04_0001.offset  iso_bullet_laser_rifle_05_0001.offset  iso_bullet_laser_rifle_06_0001.offset  iso_bullet_laser_rifle_07_0001.offset  iso_bullet_laser_rifle_08_0001.offset  iso_bullet_laser_rifle_09_0001.offset  iso_bullet_laser_rifle_10_0001.offset  iso_bullet_laser_rifle_11_0001.offset  iso_bullet_laser_rifle_12_0001.offset  iso_bullet_laser_rifle_13_0001.offset  iso_bullet_laser_rifle_14_0001.offset  iso_bullet_laser_rifle_15_0001.offset  iso_bullet_military_00_0001.offset  iso_bullet_military_04_0001.offset  (+80 more)
graphics/floor_tiles/: Makefile.am  atlas.txt  iso_carpet_tile_0001.offset  iso_carpet_tile_0002.offset  iso_carpet_tile_0003.offset  iso_carpet_tile_0004.offset  iso_complicated_cmm.offset  iso_complicated_cmm2.offset  iso_complicated_p4.offset  iso_complicated_pmg.offset  iso_complicated_pmg2.offset  iso_complicated_pmm.offset  iso_grass_floor_0000.offset  iso_grass_floor_0001.offset  iso_grass_floor_0002.offset  iso_grass_floor_0003.offset  iso_grass_floor_0004.offset  iso_grass_floor_0005.offset  iso_grass_floor_0006.offset  iso_grass_floor_0007.offset  iso_grass_floor_0008.offset  iso_grass_floor_0009.offset  iso_grass_floor_0010.offset  iso_grass_floor_0011.offset  iso_grass_floor_0012.offset  iso_grass_floor_0013.offset  iso_grass_floor_0014.offset  iso_grass_floor_0015.offset  iso_grass_floor_0016.offset  iso_grass_floor_0017.offset  iso_grass_floor_0018.offset  iso_grass_floor_0019.offset  iso_grass_floor_0020.offset  iso_grass_floor_0021.offset  iso_grass_floor_0022.offset  iso_grass_floor_0023.offset  iso_grass_floor_0024.offset  iso_grass_floor_0025.offset  iso_grass_floor_0026.offset  iso_grass_floor_0027.offset  (+119 more)
graphics/obstacles/: Makefile.am  atlas.txt  default_dead_body_12_0001.offset  default_dead_body_14_0001.offset  default_dead_human_00_0001.offset  iso_autogun_0001.offset  iso_autogun_0002.offset  iso_autogun_0003.offset  iso_autogun_0004.offset  iso_autogun_act_0001.offset  iso_autogun_act_0002.offset  iso_autogun_act_0003.offset  iso_autogun_act_0004.offset  iso_autogun_n.offset  iso_autogun_s.offset  iso_autogun_shadow_0001.offset  iso_autogun_shadow_0002.offset  iso_autogun_shadow_0003.offset  iso_autogun_shadow_0004.offset  iso_bar_counter_s.offset  iso_barrel_1.offset  iso_barrel_2.offset  iso_barrel_3.offset  iso_barrel_4.offset  iso_barrel_radioactive.offset  iso_barshelf_left_we.offset  iso_barshelf_leftouter_we.offset  iso_basin_n.offset  (+890 more)
lua/: COPYRIGHT  Makefile  Makefile.am  lua.mk
po/: CMakeLists.txt  Makefile.am  check-pot-file.py  extract-strings-from-data.py  freedroidrpg.pot  freedroidrpg_data.pot  freedroidrpg_dialogs.pot  methods_on_po.py  migrate-translations.py  rebuild-dialogs-from-language.py  tx-credentials  update-potfiles  update_from_launchpad.sh  upload_to_launchpad.sh  xgettext-wrapper
src/: .cvsignore  BFont.c  BFont.h  CMakeLists.txt  Makefile.am  SDL_rotozoom.c  SDL_rotozoom.h  action.c  addon_crafting_ui.c  animate.c  armor.c  automap.c  benchmark.c  block_area.c  blocks.c  bullet.c  character.c  chat.c  colldet.c  defs.h  dynarray.c  enemy.c  event.c  extint_macros.h  faction.c  floor_tiles.c  font.c  game_act.c  game_ui.c  gen_savestruct.py  getopt.c  getopt.h  getopt1.c  global.h  graphics.c  hud.c  image.c  influ.c  init.c  input.c  (+99 more)
win32/: CMakeLists.txt  Howto_ico_gimp.txt  Makefile.am  archetypeeditor.rc  freedroidRPG.coff  freedroidRPG.nsi.in  freedroidRPG.rc  freedroidrpg.rc  install_file_lists.py  pkgApp.pl  png2ico.1  png2ico.cpp  pngtoico.1  pngtoico.c
(+8079 files in other folders)
